--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "mocha --require babel-core/register --no-timeouts *.js",
     "android-web-test": "mocha --require babel-core/register --no-timeouts android-web-test.js",
+    "android-app-test": "mocha --require babel-core/register --no-timeouts android-app-test.js",
     "start": "mocha --require babel-core/register --no-timeouts android-app-test.js",
     "ios-web-test": "mocha --require babel-core/register --no-timeouts ios-web-test.js",
     "ios-app-test": "mocha --require babel-core/register --no-timeouts ios-app-test.js",
